@@ -7,6 +7,8 @@ export(fusions2pp)
 export(fusions2pp_meta)
 export(fusions_filter)
 export(get_pp_samplegroup)
+export(muts2mutation_mapper)
+export(muts2oncoprinter)
 export(muts2pp)
 export(set_colors)
 export(set_tools)
