@@ -1,7 +1,8 @@
 2017-10-10 Li Jianfeng <lee_jianfeng@sjtu.edu.cn>
-                * muts2mutation_mapper be added in R/cbioportal_trasefer.R
+                * muts2mutation_mapper and muts2oncoprinter be added in R/cbioportal_trasefer.R
                 * inst/extdata/config/cbioportal.toml be added
-                
+                * reducing redundant code
+
 2017-09-30 Li Jianfeng <lee_jianfeng@sjtu.edu.cn>
 
                 * R/hander.R, R/mhander.R and R/filter.R be added
